# ai-source-citation

./: .gitignore  Makefile  README.md  pyproject.toml
config/: llm_judge.example.json  llm_judge.prompt.txt  llm_judge.response.schema.json
input/: example_batch_search.json  multi_search.json  no_expected_search.json  single_search.json  single_search_fail.json  single_search_pass.json
output/: example_batch_search.csv  example_batch_search.json
src/ai_source_citation/: citation_health.py  cli.py  llm_judge.py  matching.py  models.py  reporting.py
src/ai_source_citation/providers/: base.py  google.py
src/ai_source_citation/ui/: html_report.py
src/ai_source_citation/ui/assets/: report.css  report.js
tests/: test_citation_health.py  test_cli_llm_judge.py  test_llm_judge.py  test_reporting.py
